--- a/config/database.yml
+++ b/config/database.yml
@@ -9,10 +9,9 @@ development:
   password:
 
 
-# production:
-#   adapter: postgresql
-#   encoding: unicode
-#   database: justlike_app_development
-#   pool: 5
-#   host: localhost
-#   password:
+production:
+  adapter: postgresql
+  encoding: unicode
+  database: justlike_app_development
+  pool: 5
+  password:
